interface IViewState {
  currentPositionRatio: {
    from: number;
    to?: number;
  };
}

export default IViewState;
